_sass/styles.scss
/* ... */
@media (max-width: 1470px) {
    article {
        margin-top: 500px;
    }

    .text-container {
        top: calc(100vh + 500px);
    }

    .animation {

        .scientist,
        .sitting {
            bottom: calc(-6*100vh - 500px);
        }
    }
}

@media (max-width: 960px) {
    header {
        .text {
            .logo {
                max-width: 500px !important;
                width: 90vw;
            }

            h1 {
                font-size: 36px !important;
                line-height: 45px !important;
                margin: 0 !important;
                margin-bottom: 10px !important;
                max-width: 500px !important;
                width: 90vw;
            }

            .description {
                font-size: 12px !important;
                line-height: 16px !important;
                max-width: 500px !important;
                width: 90vw;
                text-align: justify !important;
            }
        }
    }

    article {
        padding-bottom: 50vh;

        .figure {
            .step {
                width: 90vw;
            }
        }

        .text-container {
            position: absolute;
            top: calc(100vh + 500px);
            left: 0;
            height: calc(5*100vh + 50vh);

            .text {
                position: -webkit-sticky;
                position: sticky;
                top: 40vh;
                margin-left: 10px;
                width: calc(100vw - 60px);
                height: calc(60vh - 40px);
                max-width: 100vw;
                background: rgba(232, 232, 232, 0.7);
                -webkit-backdrop-filter: saturate(180%) blur(10px);
                backdrop-filter: saturate(180%) blur(10px);

                border-radius: 25px;
                padding: 15px;

                h1 {
                    line-height: unset;
                }

                .bold {
                    font-size: 18px;
                    line-height: 21px;
                }

                p {
                    font-size: 14px;
                    line-height: 17px;
                }
            }
        }
    }

    .animation {
        justify-content: start !important;

        .scientist,
        .sitting {
            bottom: calc(-6*100vh - 500px - 50vh - 500px);
        }

        .bold {
            width: 100vw !important;
            max-width: 350px !important;
            font-size: 16px !important;
            line-height: 21px !important;
        }

        .app {
            canvas {
                width: 300px;
                height: 300px;
            }

            .selector {
                width: 296px;
            }

            .panel {
                height: 300px;

                .row {
                    width: 296px;
                }
            }

            .control {
                height: 300px;

                .row {
                    width: 296px;
                }
            }
        }
    }
}

.popup {
    position: fixed;
    top: 0;
    width: 100vw;
    height: 100vh;
    display: none;
    justify-content: center;
    align-items: center;
    background: rgba(0, 0, 0, 0.5);
    -webkit-backdrop-filter: saturate(180%) blur(10px);
    backdrop-filter: saturate(180%) blur(10px);
    color: black;

    .infobox {
        width: 100vw;
        height: 100vh;
        max-width: 450px;
        max-height: 600px;
        background: white;
        border-radius: 15px;

        .cross {
            background: url("../img/cross.svg");
            background-size: cover;
            position: relative;
            top: 22px;
            left: 15px;
            width: 25px;
            height: 25px;
            z-index: 10;
            cursor: pointer;
        }

        .title {
            font-family: SF Pro Display;
            font-style: normal;
            font-weight: bold;
            font-size: 36px;
            line-height: 44px;
            text-align: center;
            position: relative;
            top: -15px;
        }

        .container {
            overflow-y: scroll;
            margin-left: 10px;
            width: calc(100vw - 20px);
            max-width: calc(450px - 20px);
            height: calc(100vh - 69px);
            max-height: calc(600px - 69px);

            .center {
                font-family: SF Pro Display;
                font-style: normal;
                font-weight: bold;
                font-size: 24px;
                line-height: 36px;
                color: var(--gray);
                text-align: center;
            }
            .row {
                padding: 0 2px;
                display: flex;
                flex-direction: row;
                justify-content: space-between;
                padding-top: 13px;

                .value {
                    margin-left: 20px;
                    text-align: right;
                    color: #4c4c4c;
                }
            }
        }
    }
}

